# oscar

./: .cvsignore  CREDITS  ChangeLog  Config.mk  Gemfile  INSTALL  Makefile  Makefile.am  PACKAGE_SCRIPTS  README  README.RH3AS.IA64.txt  README.RH3AS.txt  README.RHEL.txt  README.ia64  VERSION  VERSION.in  _config.yml  acinclude.m4  autogen.sh  blog.html  build.cfg  configure.in  index.html  install_cluster  oscar-base.spec.in  oscar-core.spec  oscar.spec  oscar.spec.in  params.json  wiki.html
doc/: Config-HOWTO.html  Makefile  Makefile.am  Makefile.latex  README
doc/architecture/: .cvsignore  Makefile  Makefile.am  architecture.tex  core-packages.tex  defs.tex  design.tex  included-packages.tex  intro.tex  oscar-1.tex  packages.tex  requirements.tex  titlepage.tex  toc.tex  xml.tex
doc/by-laws/: .cvsignore  Makefile  Makefile.am  by-laws.tex  defs.tex  differences.tex  intro.tex  titlepage.tex  toc.tex
doc/development/: .cvsignore  Makefile  Makefile.am  collaboration.tex  core.tex  cvs.tex  defs.tex  development.tex  directories.tex  files.tex  intro.tex  provided_tools.tex  release.tex  rpm_from_packages_splitted_in_distro_dependant_rpmlist.txt  sourceforge.tex  third-party.tex  titlepage.tex  toc.tex  www.tex
doc/installation/: .cvsignore  Makefile  Makefile.am  brief.tex  build-notes  client-install.tex  defs.tex  detailed.tex  download.tex  install.tex  intro.tex  netboot.tex  no_dhcp.tex  notes.tex.in  outline.tex  quick_install.tex  quick_titlepage.tex  ramdisk.tex  release-notes.tex  screen-by-screen.tex  security.tex  sis.tex  supported.tex  titlepage.tex  toc.tex  troubleshooting.tex
doc/introduction/: .cvsignore  Makefile  Makefile.am  defs.tex  intro-refs.bib  intro.tex  version.tex.in
doc/monitoring-framework/: Makefile  monitoring_framework.sgml
doc/oscarpkg-howto/: .cvsignore  Makefile  TODO  background.tex  configurator.tex  defs.tex  env-switcher.tex  intro.tex  oda.tex  opd.tex  oscar-envvars-table.tex  oscarpkg-howto.tex  pkg-example.tex  pkg-layout.tex  pkg-scripts-table.tex  pkg-xml-table.tex  rules-of-thumb.tex
doc/user/: .cvsignore  Makefile  Makefile.am  build-package-docs  build-package-license  defs.tex  intro.tex  package-docs.tex.in  package-license.tex.in  packages.tex  titlepage.tex  toc.tex  user.tex  version.tex.in
lib/OSCAR/: AddNode.pm  Bootstrap.pm  CLI_MAC.pm  ClientMgt.pm  CmpVersions.pm  Config.mk  ConfigFile.pm  ConfigManager.pm  Configbox.pm  Configurator.pm  Configurator_backend.pm  Database.pm  Database_generic.pm  Defs.pm  DelNode.pm  DepMan.pm  Distro.pm  Env.pm  FileUtils.pm  FrontPanel.pm  GUI_MAC.pm  Help.pm  ImageMgt.pm  Infobox.pm  LSBreleaseParser.pm  Logger.pm  LoggerDefs.pm  MAC.pm  MACops.pm  Makefile  Makefile.am  MonitoringMgt.pm  Network.pm  NextIp.pm  NodeConfigManager.pm  NodeMgt.pm  OCA.pm  Opkg.pm  OpkgDB.pm  PackMan.pm  (+31 more)
lib/Qt/: Makefile  Makefile.am  Opder.pl  OpderAbout.pm  OpderAddRepository.pm  OpderDownloadInfo.pm  OpderDownloadPackage.pm  OpderImages.pm  OpderTable.pm  Selector.pl  SelectorAbout.pm  SelectorCheckTableItem.pm  SelectorImages.pm  SelectorManageSets.pm  SelectorTable.pm  SelectorTableItem.pm  SelectorUtils.pm
lib/Tk/: HTML.pm  Makefile  Makefile.am  Web.pm
oscarsamples/: Makefile  Makefile.am  Mandrake-8.1-i386.rpmlist  Mandrake-8.1-i586.rpmlist  Mandrake-8.2-i386.rpmlist  Mandrake-8.2-noX-i386.rpmlist  Mandrake-9.0-i386.rpmlist  Mandrake-9.0-noX-i386.rpmlist  Mandrake-9.1-noX-i386.rpmlist  RedHat-7.1-i386.rpmlist  RedHat-7.2-i386.rpmlist  RedHat-7.2-ia64.rpmlist  RedHat-7.3-i386.rpmlist  RedHat-8.0-i386.rpmlist  SuSE-8.1-i586.rpmlist  cciss.disk  centos-5-i386.rpmlist  centos-5-x86_64.rpmlist  centos-5.3-x86_64.rpmlist  centos-6-i386.rpmlist  centos-6-x86_64.rpmlist  centos-7-x86_64.rpmlist  debian-3-i386.rpmlist  debian-4-i386.rpmlist  debian-4-x86_64.rpmlist  debian-5-i386.rpmlist  debian-5-x86_64.rpmlist  fc-10-x86_64.rpmlist  fc-2-i386.rpmlist  fc-3-i386.rpmlist  fc-3-x86_64.rpmlist  fc-4-i386.rpmlist  fc-4-x86_64.rpmlist  fc-5-i386.rpmlist  fc-5-x86_64.rpmlist  fc-6-i386.rpmlist  fc-7-i386.rpmlist  fc-7-x86_64.rpmlist  fc-8-i386.rpmlist  fc-9-x86_64.rpmlist  (+70 more)
oscarsamples/diskfiles/: Makefile  cciss.disk  ide-pata.disk  ide-sata.disk  scsi.ia64.disk  scsi.ppc64-ps3.disk  swraid1-scsi.disk
oscarsamples/img_bootstrap/: Makefile  README  centos-7-x86_64.bootstrap  debian-8-x86_64.bootstrap  fedora-18-x86_64.cleanup  fedora-19-x86_64.bootstrap  fedora-20-x86_64.bootstrap  fedora-23-x86_64.bootstrap  rhel-10-aarch64.bootstrap  rhel-10-aarch64.cleanup  rhel-10-x86_64.bootstrap  rhel-10-x86_64.cleanup  rhel-6-x86_64.bootstrap  rhel-6-x86_64.cleanup  rhel-7-x86_64.cleanup  rhel-8-x86_64.bootstrap  rhel-8-x86_64.cleanup  rhel-9-x86_64.bootstrap  rhel-9-x86_64.cleanup  suse-15-x86_64.bootstrap  ubuntu-1404-x86_64.bootstrap  ubuntu-1404-x86_64.cleanup
oscarsamples/pkglists/: Makefile  almalinux-10-aarch64.pkglist  almalinux-8-x86_64.pkglist  almalinux-9-aarch64.pkglist  almalinux-9-x86_64.pkglist  centos-5-x86_64.pkglist  centos-8-x86_64.pkglist  debian-4-i386.pkglist  debian-5-x86_64.pkglist  fedora-17-x86_64.pkglist  fedora-27-x86_64.pkglist  opensuse-15.2-x86_64.pkglist  redhat-el-5-i386.pkglist  (+9 more)
scripts/: .cvsignore  Makefile  Makefile.PL  Makefile.am  OCA-driver.pl  allow_client_access  audit-srpm  build_all_rpms  build_opkg_rpms  build_oscar_repo  build_oscar_rpms  build_rpms  c3_conf_manager  client_status  compute_repo_url  config-xml-convert.pl  create_and_populate_basic_node_info  create_oscar_database  distro-query  gen_simple_client_config_xml  generic-setup  get-oscar-version.sh  get_arch  get_num_proc  install_prereq  install_server  integrate_image  mac_collector  macinfo2sis  make_database_password  manage_cluster  monitor_deployment  oda  opd  opd2  opkg-copy  oscar  oscar-cluster  oscar-config  oscar-updater  (+38 more)
testing/: Makefile  Makefile.am  OSCAR_test.tgz  README.pbs_test  README.testing  oscar-testing.txt  pbs_test  run_unit_test  ssh_user_tests  test_cluster  test_cluster_as_root  test_install  test_oca.pl  test_system-sanity.pl  testprint
(+1129 files in other folders)
