# -*- shell-script -*-
#
# Copyright (c) 2002 The Trustees of Indiana University.  
#                    All rights reserved.
# 
# This file is part of the OSCAR software package.  For license
# information, see the COPYING file in the top level directory of the
# OSCAR source distribution.
#
# $Id: configure.in,v 1.35 2003/07/02 19:38:04 tfleury Exp $
#
# $HEADER$
#

# Init autoconf

AC_INIT(./doc/installation/install.tex)
AC_CONFIG_AUX_DIR(./dist)
AC_PREREQ(2.5)

# Get the version of OSCAR that we are installing

get_version="sh $srcdir/dist/get-oscar-version.sh $srcdir"
OSCAR_VERSION="`eval $get_version --full`"
OSCAR_MAJOR_VERSION="`eval $get_version --major`"
OSCAR_MINOR_VERSION="`eval $get_version --minor`"
OSCAR_RELEASE_VERSION="`eval $get_version --release`"
OSCAR_ALPHA_VERSION="`eval $get_version --alpha`"
OSCAR_BETA_VERSION="`eval $get_version --beta`"

AC_SUBST(OSCAR_MAJOR_VERSION)
AC_SUBST(OSCAR_MINOR_VERSION)
AC_SUBST(OSCAR_RELEASE_VERSION)
AC_SUBST(OSCAR_ALPHA_VERSION)
AC_SUBST(OSCAR_BETA_VERSION)
AC_SUBST(OSCAR_VERSION)

echo "Configuring OSCAR version $OSCAR_VERSION"

# Intialize automake

AM_INIT_AUTOMAKE(oscar, $OSCAR_VERSION, 'no')

# Just because we might as well... :-)

AC_CANONICAL_HOST

# Make automake clean emacs ~ files for "make clean"

CLEANFILES="*~ .*~ .\#*"
AC_SUBST(CLEANFILES)

# Look for things to make the .tex documentation

OSCAR_CHECK_PROG(LATEX, latex)
OSCAR_CHECK_PROG(PDFLATEX, pdflatex)
OSCAR_CHECK_PROG(DVIPS, dvips)
OSCAR_CHECK_PROG(FIG2DEV, fig2dev)
OSCAR_CHECK_PROG(PNGTOPNM, pngtopnm)
OSCAR_CHECK_PROG(PNMTOPS, pnmtops)
OSCAR_CHECK_PROG(LATEX2HTML, latex2html)

# Option for the HTML documentation

LATEX2HTML_OPTIONS="--split=6 -local_icons -long_titles 3 -auto_navigation \
--html_version=4.0 -show_section_numbers"

# Need to put these here because automake < 1.6 doesn't recognize
# AC_ARG_VAR -- so although the variables will be AC_SUBST'ed, they
# won't be instantiated in all the Makefiles.  Grumble...

AC_SUBST(LATEX)
AC_SUBST(PDFLATEX)
AC_SUBST(DVIPS)
AC_SUBST(FIG2DEV)
AC_SUBST(PNGTOPNM)
AC_SUBST(PNMTOPS)
AC_SUBST(LATEX2HTML)
AC_SUBST(LATEX2HTML_OPTIONS)

# List all the files to be made

AC_CONFIG_FILES([
    Makefile
    VERSION

    dist/Makefile
    dist/programs.sh

    doc/Makefile
    doc/architecture/Makefile
    doc/by-laws/Makefile
    doc/development/Makefile
    doc/installation/Makefile
    doc/installation/version.tex
    doc/user/Makefile
    doc/user/version.tex

    lib/Makefile
    lib/OSCAR/Makefile
    lib/Tk/Makefile
    lib/Tk/HTML/Makefile
    lib/Qt/Makefile

    images/Makefile

    oscarsamples/Makefile

    scripts/Makefile

    share/Makefile
    share/prereqs/Makefile
    share/prereqs/HTML-Tree/Makefile
    share/prereqs/HTML-Tree/media/Makefile
    share/prereqs/HTML-Tree/scripts/Makefile
    share/prereqs/oda/Makefile
    share/prereqs/oda/scripts/Makefile
    share/prereqs/XML-Parser/Makefile
    share/prereqs/XML-Parser/media/Makefile
    share/prereqs/XML-Parser/scripts/Makefile
    share/prereqs/XML-Simple/Makefile
    share/prereqs/XML-Simple/media/Makefile
    share/prereqs/XML-Simple/scripts/Makefile
    share/serverlists/Makefile

    testing/Makefile
])

# Include the file generated by autogen.sh which lists all the
# Makefiles that need to be created in the package/ tree.

sinclude(dist/config_files_list.m4)

# Actually generate the files

AC_OUTPUT

