# -*- makefile -*-
#
# Copyright (c) 2003 The Trustees of Indiana University.  
#                    All rights reserved.
# 
# $Id: Makefile.am,v 1.13 2003/08/05 19:11:15 jsquyres Exp $
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

oscar_DATA		= \
			mandrake-8.2-i386.rpmlist \
			mandrake-8.2-nox-i386.rpmlist \
			mandrake-9.0-i386.rpmlist \
			mandrake-9.0-nox-i386.rpmlist \
			mandrake-9.1-nox-i386.rpmlist \
			redhat-7.1-i386.rpmlist \
			redhat-7.2-i386.rpmlist \
			redhat-7.3-i386.rpmlist \
			redhat-7.3-nox-i386.rpmlist \
			redhat-8.0-i386.rpmlist \
			redhat-9-i386.rpmlist \
			suse-8.1-i586.rpmlist \
			sample.disk.ide \
			sample.disk.scsi

EXTRA_DIST		= $(oscar_DATA)
