# -*- makefile -*-
#
# Copyright (c) 2003 The Trustees of Indiana University.  
#                    All rights reserved.
# 
# $Id: Makefile.am,v 1.13 2003/08/05 19:11:15 jsquyres Exp $
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

oscar_DATA		= \
            		fedora-2-i386.rpmlist \
			fedora-3-i386.rpmlist \
			mandrake-10.0-i386.rpmlist \
			redhat-3as-i386.rpmlist \
			redhat-3as-ia64.rpmlist \
			redhat-3asU2-i386.rpmlist \
			redhat-3asU2-ia64.rpmlist \
			redhat-el4-i386.rpmlist \
			redhat-9-i386.rpmlist \
			sample.disk.ide \
			sample.disk.scsi \
			sample.disk.scsi.ia64 

EXTRA_DIST		= $(oscar_DATA)
