# -*- makefile -*-
#
# Copyright (c) 2003 The Trustees of Indiana University.  
#                    All rights reserved.
# 
# $Id: Makefile.am,v 1.13 2003/08/05 19:11:15 jsquyres Exp $
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

oscar_DATA		= \
            		fc-2-i386.rpmlist \
			fc-3-i386.rpmlist \
			fc-3-x86_64.rpmlist \
			fc-4-i386.rpmlist \
			mandrake-10.0-i386.rpmlist \
			mandrake-10.1-i386.rpmlist \
			mandriva-2006-i386.rpmlist \
			rhel-3-i386.rpmlist \
			rhel-3-x86_64.rpmlist \
			rhel-3-ia64.rpmlist \
			redhat-3asU2-i386.rpmlist \
			redhat-3asU2-ia64.rpmlist \
			rhel-4-i386.rpmlist \
			rhel-4-ia64.rpmlist \
			rhel-4-x86_64.rpmlist \
			ide.disk \
			scsi.disk \
			scsi.ia64.disk \
			swraid1-scsi.disk

EXTRA_DIST		= $(oscar_DATA)
