# -*- makefile -*-
#
# Copyright (c) 2002 The Trustees of Indiana University.  
#                    All rights reserved.
#
# This file is part of the OSCAR software package.  For license
# information, see the COPYING file in the top level directory of the
# OSCAR source distribution.
#
# $Id: Makefile.am,v 1.11 2003/04/22 01:57:24 naughtont Exp $
#

EXTRA_DIST		= \
			allow_client_access \
			get_num_proc \
			install_server \
			macinfo2sis \
			opd \
			oscar_wizard \
			package_config_xmls_to_database \
			ping_clients \
			post_clients \
			post_install \
			post_rpm_install \
			setup_pxe \
			ssh_install \
			start_over \
			wizard_prep
