# -*- makefile -*-
#
# Copyright (c) 2002-2003 The Trustees of Indiana University.  
#                         All rights reserved.
# 
# $Id: Makefile.am,v 1.5 2003/07/04 14:44:22 jsquyres Exp $
#
# This file is part of the OSCAR distribution.  See license
# information in the top-level directory.
#

include $(top_srcdir)/dist/Makefile.options

oscar_SCRIPTS		= pbs_test testprint test_cluster ssh_user_tests
oscar_DATA		= README.pbs_test

EXTRA_DIST		= $(oscar_SCRIPTS) $(oscar_DATA)
